--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,9 +47,9 @@ jobs:
           export CC=$(which gcc)
           export CXX=$(which gcc++)
           export CURRENT_SOURCE_DIR=$(pwd)
-          printenv
-          cd ${{env.Qt5_Dir}}/bin
-          ls -all
+          # printenv
+          # cd ${{env.Qt5_Dir}}/bin
+          # ls -all
           mkdir build && cd build
           export CURRENT_BUILD_DIR=$(pwd)
           cmake .. -G Ninja
