--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,9 +18,8 @@ jobs:
 
       - name: Installing Dependencies
         run: |
-          sudo apt-get update && sudo apt-get install build-essential
-          sudo apt install clang clang-tidy clang-format ninja-build -y
-        # sudo apt install mesa-common-dev libglu1-mesa-dev -y
+# sudo apt-get update && sudo apt-get install build-essential
+          sudo apt update && sudo apt install clang-tidy clang-format ninja-build -y
       
       - name: Setup cmake
         uses: jwlawson/actions-setup-cmake@v1.13
